tests/errors/deferred_shape_01.f90
program deferred_shape_01
implicit none
integer :: a(:)
end program
